demo/demo-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-svc
  name: demo-svc
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo
  sessionAffinity: None
  type: NodePort
